--- a/SmartMove/app/src/main/res/values/themes.xml
+++ b/SmartMove/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.GCU1" parent="Theme.AppCompat.NoActionBar">
+    <style name="Theme.SmartMove" parent="Theme.AppCompat.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/smartloc_darkblue</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -16,7 +16,7 @@
     </style>
 
 
-    <style name="Theme.GCU1.NoActionBar">
+    <style name="Theme.SmartMove.NoActionBar" parent="Theme.AppCompat.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
