--- a/SmartMove/app/src/main/res/values/themes.xml
+++ b/SmartMove/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorOnPrimary</item>
         <!-- Customize your theme here. -->
-        
+
     </style>
 
 
@@ -24,4 +24,8 @@
     <style name="Theme.GCU1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.GCU1.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Theme.SmartMove.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.SmartMove.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
