--- a/SmartMove/app/src/main/res/layout/impact_tile.xml
+++ b/SmartMove/app/src/main/res/layout/impact_tile.xml
@@ -42,7 +42,7 @@
                 app:srcCompat="@drawable/leaf" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/impactText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1,2 tonnes de CO2eq"
