--- a/SmartMove/app/src/main/res/layout/activity_scrolling.xml
+++ b/SmartMove/app/src/main/res/layout/activity_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/smartloc_light"
-    tools:context=".ScrollingActivity">
+    tools:context=".CGUActivity">
 
 
     <include
