--- a/SmartMove/app/src/main/res/layout/content_scrolling.xml
+++ b/SmartMove/app/src/main/res/layout/content_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ScrollingActivity"
+    tools:context=".CGUActivity"
     tools:showIn="@layout/activity_scrolling"
     android:orientation="vertical">
 
