Mapping image conso

--- a/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
+++ b/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
@@ -60,11 +60,11 @@
 
 
                         <TextView
-                            android:id="@+id/phraseEq"
+                            android:id="@+id/comparaison"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Cette semaine, ma conso carbone est de ... cela équivaut à : "
-                            android:textAppearance="@style/MAINtileCO2" />
+                            android:textAppearance="@style/MAINtileCO2"
+                            android:hint="a"/>
 
 
 
