--- a/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
+++ b/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
@@ -44,7 +44,9 @@
                         style="@style/MAINtileTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="A quoi équivaut ma conso carbone?"
+                        android:layout_marginLeft="10dip"
+                        android:layout_marginRight="10dip"
+                        android:text="@string/a_quoi_quivaut_ma_conso_carbone"
                         android:textAllCaps="false"
                         android:textAppearance="@style/CGUtitre" />
 
@@ -63,10 +65,18 @@
                             android:id="@+id/comparaison"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dip"
+                            android:layout_marginRight="10dip"
                             android:textAppearance="@style/MAINtileCO2"
-                            android:hint="a"/>
+                            />
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="20dip" />
 
 
+
+                    </LinearLayout>
 
 
 
@@ -74,6 +84,18 @@
 
 
                     </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/comparaisonImage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        />
 
                 </LinearLayout>
 
