--- a/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
+++ b/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
@@ -23,8 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dip"
@@ -46,7 +45,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dip"
                         android:layout_marginRight="10dip"
-                        android:text="@string/a_quoi_quivaut_ma_conso_carbone"
+                        android:text="@string/impact_carbone"
                         android:textAllCaps="false"
                         android:textAppearance="@style/CGUtitre" />
 
@@ -57,39 +56,70 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        >
+
+                        <ImageView
+                            android:id="@+id/imageView"
+                            android:layout_width="45dp"
+                            android:layout_height="40dip"
+                            android:layout_marginRight="10dp"
+                            app:srcCompat="@drawable/leaf" />
+
+                        <TextView
+                            android:id="@+id/impactText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1,2 tonnes de CO2eq"
+                            android:textAppearance="@style/MAINtileCO2" />
+
+                        />
+
+                    </LinearLayout>
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="20dip" />
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:text="@string/comparaison"
+                        android:textAppearance="@style/MAINtileCO2"
+                        android:textColor="#1E88E5" />
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
                         android:orientation="horizontal">
 
 
                         <TextView
-                            android:id="@+id/comparaison"
+                            android:id="@+id/comparaison_explication_phrase"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dip"
                             android:layout_marginRight="10dip"
                             android:textAppearance="@style/MAINtileCO2"
-                            />
-
-                        <Space
-                            android:layout_width="match_parent"
-                            android:layout_height="20dip" />
-
-
-
-                    </LinearLayout>
-
-
+                            android:textColor="#3949AB" />
 
 
 
 
                     </LinearLayout>
+
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    >
 
                     <ImageView
                         android:id="@+id/comparaisonImage"
