Texte "Résultat du calcul" clickable qui renvoie vers le wiki

--- a/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
+++ b/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
@@ -89,7 +89,7 @@
                         android:textAlignment="viewEnd"
                         android:textColor="#192365"
                         android:textStyle="italic"
-                        />
+                        android:onClick="viewCalculationExplanation"/>
 
                     <TextView
                         android:id="@+id/textViewComparaison"
