--- a/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
+++ b/SmartMove/app/src/main/res/layout/activity_carbon_equivalent.xml
@@ -86,6 +86,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/explication_du_r_sultat"
+                        android:layout_marginLeft="10dip"
+                        android:layout_marginRight="2dip"
                         android:textAlignment="viewEnd"
                         android:textColor="#192365"
                         android:textStyle="italic"
@@ -96,15 +98,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:layout_marginLeft="10dip"
+                        android:layout_marginRight="10dip"
                         android:text="@string/comparaison"
                         android:textAppearance="@style/MAINtileCO2"
                         android:textColor="#1E88E5" />
 
-                    <LinearLayout
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="20dip" />
+
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
 
                         <TextView
@@ -113,32 +120,25 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dip"
                             android:layout_marginRight="10dip"
+                            android:gravity="center_horizontal"
                             android:textAppearance="@style/MAINtileCO2"
                             android:textColor="#3949AB" />
 
 
 
 
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    >
-
                     <ImageView
                         android:id="@+id/comparaisonImage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        />
+                        android:paddingTop="0dip"
+                     />
+
+
+                    </RelativeLayout>
+
 
                 </LinearLayout>
-
             </LinearLayout>
 
         </ScrollView>
