--- a/SmartMove/app/src/main/res/layout/objectifs_tile.xml
+++ b/SmartMove/app/src/main/res/layout/objectifs_tile.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="OBJECTIFS"
+        android:text="@string/obj"
         android:textAppearance="@style/MAINtileTitle_light" />
 
     <include
