--- a/SmartMove/app/src/main/res/layout/impact_tile.xml
+++ b/SmartMove/app/src/main/res/layout/impact_tile.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
                 android:clickable="true"
-                android:onClick="clickNew"
+                android:onClick="clickOpenCarbonEquivalentPage"
                 android:layout_height="20dip"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/info" />
