--- a/SmartMove/app/src/main/res/layout/navbar.xml
+++ b/SmartMove/app/src/main/res/layout/navbar.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="70dp"
+    android:layout_height="90dp"
     android:background="@color/smartloc_light"
     android:gravity="bottom"
     android:paddingBottom="10dip"
@@ -10,6 +11,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:src="@drawable/smartmovelong" />
+        android:src="@drawable/smartmovelong"
+        tools:ignore="ImageContrastCheck" />
 
 </LinearLayout>
