--- a/SmartMove/app/src/main/res/layout/user_and_trip_view.xml
+++ b/SmartMove/app/src/main/res/layout/user_and_trip_view.xml
@@ -1,7 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nouveau Trip" />
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Autoriser le changement de Segment" />
+
+            <ToggleButton
+                android:id="@+id/toggleTripSegmentChange"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:text="Changer de tripSegment" />
+        </TableRow>
+
+    </TableLayout>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/status_permission_title"
+                android:layout_width="331dp"
+                android:layout_height="wrap_content"
+                android:text="Permissions pour OSM" />
+
+            <TextView
+                android:id="@+id/status_permission"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/number_of_segments_title"
+                android:layout_width="331dp"
+                android:layout_height="wrap_content"
+                android:text="Nombre de Segments dans le Trip" />
+
+            <TextView
+                android:id="@+id/number_of_segments"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/number_of_positions_title"
+                android:layout_width="331dp"
+                android:layout_height="wrap_content"
+                android:text="Nombre de positions dans le Segment" />
+
+            <TextView
+                android:id="@+id/number_of_positions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TransportType identifié" />
+
+            <TextView
+                android:id="@+id/computedTransportType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </TableRow>
+
+    </TableLayout>
+
+    <Button
+        android:id="@+id/center_map_on_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Centrer sur la position actuelle" />
+
+    <org.osmdroid.views.MapView
+        android:id="@+id/mapViewPositions"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 </LinearLayout>
