--- a/SmartMove/app/src/main/res/layout/user_and_trip_view.xml
+++ b/SmartMove/app/src/main/res/layout/user_and_trip_view.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/forceNewTrip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nouveau Trip" />
@@ -108,11 +108,23 @@
 
     </TableLayout>
 
-    <Button
-        android:id="@+id/center_map_on_user"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Centrer sur la position actuelle" />
+        android:orientation="horizontal"
+        android:gravity="center">
+        <Button
+            android:id="@+id/center_map_on_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Centrer" />
+        <Button
+            android:id="@+id/DisplayTrip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Afficher le trip" />
+    </LinearLayout>
+
 
     <org.osmdroid.views.MapView
         android:id="@+id/mapViewPositions"
