--- a/SmartMove/app/src/main/res/layout/user_and_trip_view.xml
+++ b/SmartMove/app/src/main/res/layout/user_and_trip_view.xml
@@ -94,6 +94,23 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/speedTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vitesse calculée" />
+
+            <TextView
+                android:id="@+id/computedSpeed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
