--- a/SmartMove/app/src/main/res/layout/objectif_unique_tile.xml
+++ b/SmartMove/app/src/main/res/layout/objectif_unique_tile.xml
@@ -14,7 +14,8 @@
         android:orientation="vertical"
         android:paddingHorizontal="10dip"
         android:paddingVertical="10dip"
-        android:elevation="10dip">
+        android:elevation="10dip"
+        android:onClick="onTileClicked">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -85,14 +86,6 @@
                 android:text="@string/explication_defi"
                 android:textAppearance="@style/DefiSubtitle" />
 
-            <ImageView
-                android:id="@+id/imageViewNavToCarbonEquivalent"
-                android:layout_width="wrap_content"
-                android:clickable="true"
-                android:onClick="clickOpenCarbonEquivalentPage"
-                android:layout_height="20dip"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/info" />
 
         </LinearLayout>
     </LinearLayout>
