--- a/SmartMove/app/src/main/res/layout/objectif_unique_tile.xml
+++ b/SmartMove/app/src/main/res/layout/objectif_unique_tile.xml
@@ -15,7 +15,7 @@
         android:paddingHorizontal="10dip"
         android:paddingVertical="10dip"
         android:elevation="10dip"
-        android:onClick="onTileClicked">
+        android:id="@+id/challengeLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,7 +45,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="4"
                 android:gravity="end"
                 android:orientation="vertical">
 
